[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Weapon/Knife.gd" type="Script" id=1]
[ext_resource path="res://Assets/SFX/Weapon/knife_swoosh.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/SFX/Weapon/Knife_Pull_out.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/SFX/Weapon/Knife_stab.wav" type="AudioStream" id=4]

[sub_resource type="CapsuleShape2D" id=1]

[node name="Knife" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.2, 0.21 )
shape = SubResource( 1 )
disabled = true

[node name="GunShotSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 5.0

[node name="GunSwitchSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 15.0

[node name="GunStabSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 10.0
[connection signal="body_entered" from="." to="." method="_on_Knife_body_entered"]
